codex-rs/tui/src/snapshots/codex_tui__chatwidget__slash_dispatch__account_settings__tests__account_settings_disabled.snap
---
source: tui/src/chatwidget/../account_settings_tests.rs
expression: "render_settings(config, AutomaticAccountSelection::Disabled)"
---

  Accounts
  Automatic account selection is disabled. Changes apply to new sessions.

  1. Enable automatic selection             Choose and switch accounts when
                                            needed.
› 2. Disable automatic selection (current)  Stay on the current or manually
                                            selected account.



  Press enter to confirm or esc to go back
