codex-rs/tui/src/snapshots/codex_tui__chatwidget__slash_dispatch__account_settings__tests__account_settings_enabled.snap
---
source: tui/src/chatwidget/../account_settings_tests.rs
expression: "render_settings(config, AutomaticAccountSelection::Enabled)"
---

  Accounts
  Automatic account selection is enabled. Restart Codex to use changes.

› 1. Enable automatic selection (current)  Choose and switch accounts when needed.
  2. Disable automatic selection           Stay on the current or manually
                                           selected account.




  Press enter to confirm or esc to go back
