codex-rs/tui/src/snapshots/codex_tui__chatwidget__slash_dispatch__account_settings__tests__account_settings_toggle_failure.snap
---
source: tui/src/chatwidget/../account_settings_tests.rs
expression: error
---
Failed to update automatic account selection: permission denied
