codex-rs/tui/src/snapshots/codex_tui__chatwidget__slash_dispatch__account_settings__tests__account_settings_toggle_overridden.snap
---
source: tui/src/chatwidget/../account_settings_tests.rs
expression: message
---
Automatic account selection remains enabled because this setting is controlled elsewhere.
