codex-rs/tui/src/snapshots/codex_tui__chatwidget__slash_dispatch__account_settings__tests__account_settings_toggle_success.snap
---
source: tui/src/chatwidget/../account_settings_tests.rs
expression: success
---
Automatic account selection disabled. New sessions will use this setting.
